; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_uarb_add32.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_uarb_add32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32, i32)* @uarb_add32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uarb_add32(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp sgt i32 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %3
  %11 = load i64, i64* %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = and i32 %13, 65535
  %15 = call i32 @uarb_inc(i64 %11, i32 %12, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i64, i64* %5, align 8
  %17 = add nsw i64 %16, 1
  %18 = load i32, i32* %6, align 4
  %19 = sub nsw i32 %18, 1
  %20 = load i32, i32* %7, align 4
  %21 = ashr i32 %20, 16
  %22 = call i32 @uarb_inc(i64 %17, i32 %19, i32 %21)
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %4, align 4
  br label %28

24:                                               ; preds = %3
  %25 = load i64, i64* %5, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @uarb_set(i64 %25, i32 %26)
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %24, %10
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @uarb_inc(i64, i32, i32) #1

declare dso_local i32 @uarb_set(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
